updated Vnet and subnets in playbook

--- a/PedroPlaybook.yml
+++ b/PedroPlaybook.yml
@@ -2,21 +2,37 @@
   hosts: localhost
   connection: local
   tasks:
+  - name: Create resource group
+    azure_rm_resourcegroup:
+      name: PedroTactile
+      location: ukwest
+
   - name: Create virtual network
     azure.azcollection.azure_rm_virtualnetwork:
-      resource_group: PedroTesting
+      resource_group: PedroTactile
       name: virtualPedroNetwork
       address_prefixes: "10.10.0.0/16"
 
   - name: Add subnet
     azure.azcollection.azure_rm_subnet:
-      resource_group: PedroTesting
-      name: subnet001
-      address_prefix: "10.10.0.0/24"
+      resource_group: PedroTactile
+      name: subnetBastion
+      address_prefix: "10.10.0.0/29"
+      virtual_network: virtualPedroNetwork
+
+  - name: Add subnet
+    azure.azcollection.azure_rm_subnet:
+      resource_group: PedroTactile
+      name: subnetAppli
+      address_prefix: "10.10.0.0/29"
       virtual_network: virtualPedroNetwork
 
   - name: Create public ip
     azure.azcollection.azure_rm_publicipaddress:
-      resource_group: PedroTesting
+      resource_group: PedroTactile
       allocation_method: Static
       name: pedroIp
+    register: output_ip_address     
+  - name: Public IP of VM
+    debug:
+      msg: "The public IP is {{ output_ip_address.state.ip_address }}."
