--- a/PedroPlaybook.yml
+++ b/PedroPlaybook.yml
@@ -32,8 +32,53 @@
       resource_group: PedroTactile
       allocation_method: Static
       name: pedroIpBastion
-    register: output_ip_address_bastion     
+    register: output_ip_address_bastion    
   - name: Public IP of VM
     debug:
-      msg: "The public IP is {{ output_ip_address_bastion.state.ip_address }}."
+      msg: "The public IP for the Bastion is {{ output_ip_address.state.ip_address }}."
+  
+  - name: Create public ip
+    azure.azcollection.azure_rm_publicipaddress:
+      resource_group: PedroTactile
+      allocation_method: Static
+      name: pedroIpAppli
+    register: output_ip_address_Appli   
+  - name: Public IP of VM
+    debug:
+      msg: "The public IP for the appli is {{ output_ip_address.state.ip_address }}."
 
+  - name: Create MySQL Server
+      azure_rm_mysqlserver:
+        resource_group: "PedroTactile"
+        name: "MyPedroSQLServ"
+        sku:
+          name: B_Gen5_1
+          tier: Basic
+        location: "ukwest"
+        version: 5.6
+        enforce_ssl: True
+        admin_username: "{{ admin_username }}"
+        admin_password: "{{ admin_password }}"
+        storage_mb: 51200
+  - name: Create instance of MySQL Database
+      azure_rm_mysqldatabase:
+        resource_group: "PedroTactile"
+        server_name: "MyPedroSQLServ"
+        name: "MyPedroSQLDDB"
+
+  - name: Create Azure Cache for Redis
+    azure_rm_rediscache:
+      resource_group: "PedroTactile"
+      name: "{{ redis_name }}"
+      sku:
+        name: basic
+        size: C1
+
+  - name: Wait for Redis provisioning to complete
+    azure_rm_rediscache_info:
+      resource_group: "PedroTactile"
+      name: "{{ redis_name }}"
+    register: facts
+    until: "{{ facts.rediscaches[0]['provisioning_state'] == 'Succeeded' }}"
+    retries: 100
+    delay: 60
