--- a/WingsVM.yml
+++ b/WingsVM.yml
@@ -18,7 +18,7 @@
       resource_group: PedroTactile
       name: NICole_kidmann
       virtual_network: virtualPedroNetwork
-      subnet: subnetAppli
+      subnet: subnetPedro
       security_group: PedroWingsNSG
       ip_configurations:
         - name: ipconfig2
