--- a/BDDcache.yml
+++ b/BDDcache.yml
@@ -10,8 +10,8 @@
         name: B_Gen5_1
         tier: Basic
       location: francecentral
+      enforce_ssl: yes
       version: 8.0
-      enforce_ssl: True
       admin_username: pterodactyl
       admin_password: MotDeP3dro!
   - name: Create instance of MySQL Database
@@ -20,6 +20,14 @@
       resource_group: PedroTactile
       server_name: MyPedroSQLServ
       name: pterodactyl
+
+  - name: Create (or update) MySQL firewall rule
+    azure_rm_mysqlfirewallrule:
+      resource_group: Pedrotactile
+      server_name: MyPedroSQLServ
+      name: ip_simplon
+      start_ip_address: 212.51.190.22
+      end_ip_address: 212.51.190.22
   
   - name: Create user with password, all database privileges and 'WITH GRANT OPTION' in pterodactyl
     community.mysql.mysql_user:
@@ -27,6 +35,7 @@
       login_password: MotDeP3dro!
       host: mypedrosqlserv
       login_host: mypedrosqlserv.mysql.database.azure.com
+      check_hostname: yes
       state: present
       name: pterodactyluser
       password: MotDeP3dro!
