--- a/BDDcache.yml
+++ b/BDDcache.yml
@@ -23,7 +23,7 @@
 
   - name: Create (or update) MySQL firewall rule
     azure_rm_mysqlfirewallrule:
-      resource_group: Pedrotactile
+      resource_group: PedroTactile
       server_name: MyPedroSQLServ
       name: ip_simplon
       start_ip_address: 212.51.190.22
