--- a/pedroContainer.yml
+++ b/pedroContainer.yml
@@ -9,6 +9,7 @@
       os_type: linux
       ip_address: public
       dns_name_label: PedroPanel
+      restart_policy: always
       containers:
         - name: PedroContainer
           image: aeonlucid/pterodactyl-panel
