--- a/PreDroProd/BDDcache.yml
+++ b/PreDroProd/BDDcache.yml
@@ -28,12 +28,19 @@
 
   - name: Create (or update) MySQL firewall rule
     azure_rm_mysqlfirewallrule:
-
       resource_group: PedroTactile
       server_name: MyPedroSQLServ
       name: ip_simplon
       start_ip_address: 212.51.190.22
       end_ip_address: 212.51.190.22
+
+  - name: Create (or update) MySQL firewall rule
+    azure_rm_mysqlfirewallrule:
+      resource_group: PedroTactile
+      server_name: MyPedroSQLServ
+      name: ip_panel
+      start_ip_address: 
+      end_ip_address: 
   
   - name: Create user with password, all database privileges and 'WITH GRANT OPTION' in pterodactyl
     community.mysql.mysql_user:
