update on playbooks

--- a/PreDroProd/mainPlay.yml
+++ b/PreDroProd/mainPlay.yml
@@ -1,7 +1,8 @@
-- hosts: localhost
+- name: Main PedroBook
+  hosts: localhost
   tasks:
-  - ansible.builtin.debug:
-      msg: Début du playbook !
+  # - ansible.builtin.debug:
+  #   msg: Début du playbook
 
 # - name: Playbook infra PedroTactileⒸ
 #   ansible.builtin.import_playbook: PedroInfra.yml
@@ -9,14 +10,14 @@
 # - name: Déploiement storage account
 #   ansible.builtin.import_playbook: pedroShare.yml
 
-# - name: Déploiement BDD Azure MySQL
-#   ansible.builtin.import_playbook: BDDCache.yml
-
 # - name: Playbook VM bastion
 #   ansible.builtin.import_playbook: PedroBastion.yml
 
-- name: Déploiement Conteneur Panel
-  ansible.builtin.import_playbook: pedroContainer.yml
+# - name: Déploiement Conteneur Panel
+#   ansible.builtin.import_playbook: pedroContainer.yml
+
+- name: Déploiement BDD Azure MySQL
+  ansible.builtin.import_playbook: BDDcache.yml
 
 #- name: Déploiement Wings
 #ansible.builtin.import_playbook: WingsVM.yml
