added test files, changed some playbooks

--- a/PedroTest/testpedroShare.yml
+++ b/PedroTest/testpedroShare.yml
@@ -4,14 +4,14 @@
   tasks:
   - name: Create an account with kind of FileStorage
     azure_rm_storageaccount:
-      resource_group: PedroTactile
-      name: pedrostorage
+      resource_group: testPedroTactile
+      name: testpedrostorage
       type: Standard_LRS
       kind: Storage
   - name: Create storage share
     azure.azcollection.azure_rm_storageshare:
-      name: pedroshare
-      resource_group: PedroTactile
-      account_name: pedrostorage
+      name: testpedroshare
+      resource_group: testPedroTactile
+      account_name: testpedrostorage
       state: present
       quota: 5120
