--- a/PedroTest/testPedroInfra.yml
+++ b/PedroTest/testPedroInfra.yml
@@ -4,48 +4,36 @@
   tasks:
   - name: Création du resource group PedroTactileⒸ
     azure_rm_resourcegroup:
-      name: PedroTactile
+      name: testPedroTactile
       location: francecentral
 
   - name: Création du VNet
     azure.azcollection.azure_rm_virtualnetwork:
-      resource_group: PedroTactile
-      name: virtualPedroNetwork
-      address_prefixes: "10.10.0.0/16"
+      resource_group: testPedroTactile
+      name: testvirtualPedroNetwork
+      address_prefixes: "10.11.0.0/16"
 
   - name: Ajout du subnet Bastion
     azure.azcollection.azure_rm_subnet:
-      resource_group: PedroTactile
-      name: subnetPedro
-      address_prefix: "10.10.0.0/29"
-      virtual_network: virtualPedroNetwork
+      resource_group: testPedroTactile
+      name: testsubnetPedro
+      address_prefix: "10.11.0.0/24"
+      virtual_network: testvirtualPedroNetwork
 
   - name: Création ip publique vm PedroBastion
     azure.azcollection.azure_rm_publicipaddress:
-      resource_group: PedroTactile
+      resource_group: testPedroTactile
       allocation_method: Static
-      name: IPdroBastion
+      name: testIPdroBastion
     register: output_ip_address_bastion    
   - name: récupération ip bastion
     debug:
       msg: "L'ip publique bastion est : {{ output_ip_address_bastion.state.ip_address }}."
   
-  - name: Création ip publique loadbalancer
-    azure.azcollection.azure_rm_publicipaddress:
-      resource_group: PedroTactile
-      allocation_method: Static
-      name: IPdroLB
-    register: output_ip_address_lb
-  - name: récupération ip lb
-    debug:
-      msg: "L'ip publique du lb est : {{ output_ip_address_lb.state.ip_address }}"
-
-  # - name: Création ip publique conteneur
-
   - name: Création nsg autorisant ssh
     azure_rm_securitygroup:
-      resource_group: PedroTactile
-      name: PedroBastionNSG
+      resource_group: testPedroTactile
+      name: testPedroBastionNSG
       rules:
       - name: SSH
         protocol: Tcp
@@ -56,9 +44,9 @@
 
   - name: Création NIC pour vm PedroBastion
     azure_rm_networkinterface:
-      resource_group: PedroTactile
-      name: PedroBastionNIC
-      virtual_network: virtualPedroNetwork
-      subnet: subnetPedro
-      public_ip_name: IPdroBastion
-      security_group: PedroBastionNSG
+      resource_group: testPedroTactile
+      name: testPedroBastionNIC
+      virtual_network: testvirtualPedroNetwork
+      subnet: testsubnetPedro
+      public_ip_name: testIPdroBastion
+      security_group: testPedroBastionNSG
