--- a/PreDroProd/mainPlay.yml
+++ b/PreDroProd/mainPlay.yml
@@ -7,19 +7,19 @@
 # - name: Playbook infra PedroTactileⒸ
 #   ansible.builtin.import_playbook: PedroInfra.yml
 
-# - name: Déploiement storage account
-#   ansible.builtin.import_playbook: pedroShare.yml
+# - name: Déploiement BDD Azure MySQL
+#   ansible.builtin.import_playbook: BDDcache.yml
 
 # - name: Playbook VM bastion
 #   ansible.builtin.import_playbook: PedroBastion.yml
 
-# - name: Déploiement Conteneur Panel
-#   ansible.builtin.import_playbook: pedroContainer.yml
+# - name: Déploiement primary_endpoints
+#   ansible.builtin.import_playbook: pedroendpoint.yml
 
-- name: Déploiement BDD Azure MySQL
-  ansible.builtin.import_playbook: BDDcache.yml
+- name: Déploiement Panel
+  ansible.builtin.import_playbook: PedroPanel.yml
 
-#- name: Déploiement Wings
-#ansible.builtin.import_playbook: WingsVM.yml
+- name: Déploiement application gateway
+  ansible.builtin.import_playbook: appedrogatway.yml
 
-#- name: Déploiement load balancer
+# - name: Déploiement load balancer
